# observadordedominios

./: .gitignore  .tmp_apply_recommendations.py  .tmp_czds_check.py  .tmp_fix_czds_policy.py  .tmp_ingestion_audit.sql  .tmp_ingestion_audit_output.txt  .tmp_ingestion_audit_summary.sql  AGENTS.md  COMANDOS_PRODUCAO.md  COMANDOS_STACK.md  DOCKER_QUICK_START.md  MAKEFILE_GUIDE.md  Makefile  README.md  backend-deploy.tar  deploy_backend_services.sh  docker.ps1  package-lock.json  stack.ps1
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_czds.py  002_add_missing_indexes_and_artifact_timestamps.py  003_domain_id_server_default.py  004_drop_duplicate_domain_name_index.py  005_domain_redesign_partitioned.py  006_similarity_analysis_tables.py  007_ct_br_partitions.py  008_expand_czds_tld_policy_defaults.py  009_tool_execution.py  010_profile_phase1.py  011_czds_tld_quarantine.py  012_similarity_actionability.py  013_similarity_enrichment_summary.py  014_ct_fallback.py  015_similarity_scan_jobs_and_match_metadata.py  016_brand_alert_webhook.py  017_tld_domain_count_mv.py  018_llm_assessment.py  019_drop_ct_bulk.py  022_complete_tld_lists.py  (+25 more)
backend/app/: main.py
backend/tests/: conftest.py  test_api_plan3_integration.py  test_bulk_load_crtsh.py  test_compute_actionability.py  test_compute_similarity.py  test_ct_ingestor.py  test_czds_quarantine.py  test_czds_trigger_sync.py  test_homograph_detection.py  test_ingestion_config_trigger_openintel.py  test_ingestion_summary_api.py  test_monitoring_cycle_service.py  test_monitoring_event_repository.py  test_monitoring_foundation_integration.py  test_monitoring_profile.py  test_openintel_status_api.py  test_similarity_enrichment.py  test_similarity_scan_jobs_api.py  test_similarity_search_api.py  test_state_aggregator.py  test_sync_openintel_tld_status.py  test_tld_coverage.py  test_tools_phase1.py  test_workers_plan2_integration.py
ingestion/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  scheduler.py
ingestion/ingestion/: __init__.py  __main__.py  cli.py
ingestion/ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ingestion/provisioning/: __init__.py  provision_tld.py
ingestion/tests/: test_ingestion_pipeline_resilience.py
(+516 files in other folders)
