[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
boto3 = "^1.35.0"
httpx = "^0.27.0"
apscheduler = "^3.10.0"
pydantic-settings = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
bcrypt = ">=3.1.0,<4.0.0"
websocket-client = "^1.7.0"
tldextract = "^5.1.0"
dnspython = "^2.7.0"
python-whois = "^0.9.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.49.0"
imagehash = "^4.3.0"
Pillow = "^11.0.0"
geoip2 = "^4.8.0"
openai = ">=1.0.0"
pyarrow = ">=15.0.0"
s3fs = ">=2024.1.0"
cryptography = ">=42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
